--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Change color via text</h1>
+
+    <input type="text" id="colorInputText">
+
+    <input type="color" id="colorInputColor">
+
+    <input type="button" itemref="colorButton" value="Click to change color" onclick="changeColor()">
 </body>
 </html>
