--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
     <input type="color" id="colorInputColor">
 
     <input type="button" itemref="colorButton" value="Click to change color" onclick="changeColor()">
+
+    <script>
+        function changeColor() {
+            let color = document.getElementById('colorInputColor').value;
+            document.body.style.backgroundColor = color;
+            document.getElementById('colorInputText').value = color;
+        }
+    </script>
 </body>
 </html>
