--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
     <h1>Change color via text</h1>
 
-    <input type="text" id="colorInputText">
+    <hr/> <input type="text" placeholder="input text" id="colorInputText"><br />
 
     <input type="color" id="colorInputColor">
 
     <input type="button" itemref="colorButton" value="Click to change color" onclick="changeColor()">
+    </div>
 
     <script>
         function changeColor() {
