--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
     <div>
     <h1>Change color via text</h1>
 
-    <hr/> <input type="text" placeholder="input text" id="colorInputText"><br />
+    <input type="text" placeholder="input text" id="colorInputText">
 
-    <input type="color" id="colorInputColor">
-
-    <input type="button" itemref="colorButton" value="Click to change color" onclick="changeColor()">
+    <input type="button" id="colorButton" value="Click me" onclick="changeColor()">
     </div>
 
     <script>
         function changeColor() {
-            let color = document.getElementById('colorInputColor').value;
+            let color = document.getElementById('colorInputText').value;
             document.body.style.backgroundColor = color;
-            document.getElementById('colorInputText').value = color;
         }
     </script>
 </body>
