--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
         function changeColor() {
             let color = document.getElementById('colorInputText').value;
             document.body.style.backgroundColor = color;
-        }
+    }
+         const btn= document.getElementById('colorButton');
+
+         colorInputText.addEventListener("keyup", e => {
+         e.preventDefault();
+         if(e.keyCode === 13){
+         btn.click();
+    }
+    });
     </script>
 </body>
 </html>
